[tool.poetry]
name = "trying-data-structures-with-python"
version = "0.1.0"
description = "Implementing Data Structures in Python"
authors = ["ahmetkca <ahmet.karapinar@ontariotechu.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
